--- a/expressdeploy/package.json
+++ b/expressdeploy/package.json
@@ -1,7 +1,6 @@
 {
   "name": "expressdeploy",
   "version": "1.0.0",
-  "description": "",
   "license": "ISC",
   "author": "",
   "main": "index.js",
@@ -12,5 +11,8 @@
   },
   "dependencies": {
     "express": "^4.21.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
